--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -182,9 +182,10 @@
                 },
                 { experiment_id: {{ experiment.pk }}, notes: notes });
             }
+// FIXME: code duplication here, prime candidate for refactoring
             model.update = function(localModel, evt) {
                 $('#progress-modal').modal('show');
-                Dajaxice.vcweb.core.get_experiment_model(update(model), {pk: {{experiment.pk}}});
+                Dajaxice.vcweb.core.get_experiment_model(function (data) { ko.mapping.fromJS(data, model); $('#progress-modal').modal('hide');}, {pk: {{experiment.pk}}});
             }
             model.confirmExperimentAction = function(m, evt) {
                 element = evt.target;
@@ -218,7 +219,7 @@
             });
             return model;
         }
-        function confirmExperimentControllerAction(element, m, callback) {
+        function confirmExperimentControllerAction(element, experimentModel, callback) {
             confirmAction(element, function(confirmed, action) {
                 $('#progress-modal').modal('show');
                 Dajaxice.vcweb.core.experiment_controller(function(data) {
@@ -243,10 +244,6 @@
                     callback(confirmed, action);
                 }
             });
-        }
-        function update(experimentModel) {
-            return function(data) {
-            }
         }
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
