fixing incorrect block reference and s/experimentModel/model

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -39,7 +39,7 @@
     {% endfor %}
 </div>
 {% endblock page %}
-{% block footer %}
+{% block javascript %}
 {{ block.super }}
 <script type='text/javascript'>
     $(function() {
