fixing typo bugs in ParticipantGroupRelationship.copy_to_next_round and changing KO participantReady function to refer to the ko model instead of the template variable otherwise deactivating / reactivating an experiment will cause connected participants to 404 as they update.

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -395,7 +395,7 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
                 model.roundType("TREATMENT_INSTRUCTIONS");
             }
             model.participantReady = function() {
-                $.post('/experiment/participant-ready', { participant_group_id: {{ participant_group_relationship.pk }} }, function(response) {
+                $.post('/experiment/participant-ready', { participant_group_id: model.participantGroupId() }, function(response) {
                     console.debug("successfully posted to server, notifying sockjs");
                     console.debug(response);
                     getWebSocket().send(createMessageEvent("Participant finished reading instructions", "client_ready"));
