--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -1,4 +1,5 @@
 {% extends "participant/base.html" %}
+{% load tags %}
 {% load static %}
 {% block head %}
 {{ block.super }}
@@ -323,16 +324,21 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
         </div>
     </div>
 </div>
-<h3>Harvest</h3>
+<br>
 <div data-bind='ifnot: isResourceEmpty'>
-    <form id='vcweb-form' action='' method='post' class='form-inline'>
+    <form id='vcweb-form' action='' method='post' class='form-horizontal' >
         {% csrf_token %}
         <div class='control-group'>
-            <div class='controls'>
-                <input id='participantGroupId' type='hidden' name='participant_group_id' data-bind='value: participantGroupId'/>
-                <input id='harvestDecision' type="number" size="1" maxlength="1" name='harvest_decision' class='required' min="0" data-bind="value: harvestDecision, attr: { max: maxHarvestDecision }" /> 
-                <button id='submitDecision' data-bind='click: submitDecision' type='submit' class='btn'>Harvest</button>
-            </div>
+        <div class='input-prepend'>
+            <span class='add-on'><i class='icon-leaf'></i></span>
+            <input id='participantGroupId' type='hidden' name='participant_group_id' data-bind='value: participantGroupId'/>
+            <select name='harvest_decision' required="required" form="vcweb-form" data-bind='value: harvestDecision'>
+            {% for i in harvest_decision_choices %}
+            <option>{{i}}</option>
+            {% endfor %}
+            </select>
+        </div>
+        <button id='submitDecision' data-bind='click: submitDecision' type='submit' class='btn btn-primary'>Submit</button>
         </div>
     </form>
 </div>
@@ -440,9 +446,6 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
                         1000));
             };
             model.submitDecision = function(data, evt) {
-                if (evt) {
-                    evt.preventDefault();
-                }
                 model.setFormDisabled("#vcweb-form", true);
                 model.setFormDisabled("#chat-form", true);
                 var formData = $('#vcweb-form').serialize();
@@ -496,6 +499,11 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
             ko.applyBindings(experimentModel);
+            if (experimentModel.submitted()) {
+                experimentModel.setFormDisabled("#vcweb-form", true);
+                experimentModel.setFormDisabled("#chat-form", true);
+            }
+
             var s = connect();
             s.onmessage = function(json) {
                 console.debug(json);
